--- a/cart1.html
+++ b/cart1.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="toolbar-dropdown-group">
                   <div class="column"><a class="btn btn-sm btn-block btn-secondary" href="cart.html">View Cart</a></div>
-                  <div class="column"><a class="btn btn-sm btn-block btn-success" href="checkout-address.html" style="color:red">Checkout</a></div>
+                  <div class="column"><a class="btn btn-sm btn-block btn-warning" href="checkout-address.html">Checkout</a></div>
                 </div>
               </div>
             </div>
